--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,21 +39,21 @@
 [{
     "order": "1",
     "breakpoint": "0",
-    "minWidth": "500",
+    "maxWidth": "500",
     "margin": "15",
     "gutter": "10",
     "class": "mob-"
 },{
     "order": "2",
     "breakpoint": "772",
-    "minWidth": "800",
+    "maxWidth": "800",
     "margin": "40",
     "gutter": "20",
     "class": "tb-"
 },{
     "order": "3",
     "breakpoint": "992",
-    "minWidth": "1280",
+    "maxWidth": "1280",
     "margin": "80",
     "gutter": "40",
     "class": "desk-"
